# liye-ai

./: .claude-locale.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ADOPTERS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.governance  Dockerfile.knowledge  LICENSE  LiYe OS_域名整理_系统规划_chatgpt对话.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  adapters  docker-compose.mcp.yml  governance  knip.json  liye  package-lock.json  package.json  reports  schemas  stats  templates  traces  tsconfig.json  vitest.config.ts  架构设计.md
.github/: CODEOWNERS  (+1 more)
Agents/: README.md  (+1 more)
tools/phase-0b-parser/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
tools/phase-0b-parser/scripts/: lint-mutation-ban.sh  lint-verb-whitelist.sh
tools/phase-0b-parser/src/phase_0b_parser/: __init__.py  classify_credentials.py  cli.py  envelope.py  models.py  path_normalize.py  report_sealed_registry.py  scan_consumers.py  scan_db.py  scan_disk.py  verbs.py
tools/phase-0b-parser/tests/: conftest.py  test_classify_F2.py  test_classify_F3.py  test_classify_F4.py  test_classify_F9.py  test_classify_edge_cases.py  test_classify_truth_table.py  test_envelope.py  test_path_normalize.py  test_report_M6.py  test_scan_consumers_F15.py  test_scan_consumers_F5.py  test_scan_consumers_F6.py  test_scan_consumers_F7.py  test_scan_consumers_F7b.py  test_scan_consumers_invariants.py  test_scan_db_F14.py  test_scan_disk_F1.py  test_scan_disk_F12.py  test_scan_disk_F13.py  test_scan_disk_F8.py  test_scan_disk_smoke.py  test_signatures.py
tools/phase-0b-parser/tests/fixtures/: F10_target_classes_v3.yaml
(+2187 files in other folders)
